--- a/app/src/main/res/layout/activity_view_session.xml
+++ b/app/src/main/res/layout/activity_view_session.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/_sessionsLinearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
