--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -18,18 +18,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/_topicEntryLinearLayout"
-        android:layout_width="379dp"
-        android:layout_height="597dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/_topicEntryTextView"></LinearLayout>
-
     <Button
         android:id="@+id/_startVoteButton"
         android:layout_width="190dp"
@@ -41,21 +29,77 @@
         android:text="@string/start_voting"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/_topicEntryLinearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/_topicEntryRecyclerView" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/_addTopicFloatingActionButton"
+        android:src="@android:drawable/ic_input_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
         android:clickable="true"
+        android:focusable="true"
+        android:onClick="onClickAddTopic"
         app:backgroundTint="?attr/actionMenuTextColor"
+        app:layout_anchorGravity="bottom|right|end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/_topicEntryLinearLayout"
-        app:layout_constraintVertical_bias="0.818"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:focusable="true" />
+        app:src="@drawable/ic_done" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/_topicEntryRecyclerView"
+        android:layout_width="379dp"
+        android:layout_height="463dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/_topicEntryTextView" />
+
+    <LinearLayout
+        android:id="@+id/_snackbarLayout"
+        android:layout_width="101dp"
+        android:layout_height="158dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/_addTopicFloatingActionButton"
+        app:layout_constraintStart_toEndOf="@+id/_startVoteButton">
+
+        <EditText
+            android:id="@+id/_topicInputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/topic"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/_nameInputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/name"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName" />
+
+        <Spinner
+            android:id="@+id/_categoryInputSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:spinnerMode="dropdown" />
+
+        <Button
+            android:id="@+id/_addTopicButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClickFinishInput"
+            android:text="@string/add" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
