Added an adapter and vote_item for the RecyclerView in the VoteActivity. Also added simple functionality such as sorting the list by number of votes.

--- a/app/src/main/res/layout/vote_item.xml
+++ b/app/src/main/res/layout/vote_item.xml
@@ -1,6 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/_topicTitleTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/topic_title"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/_topicVotesTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/_topicUsernameTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/topic_username"
+        app:layout_constraintEnd_toEndOf="@+id/_topicTitleTextView"
+        app:layout_constraintStart_toStartOf="@+id/_topicTitleTextView"
+        app:layout_constraintTop_toBottomOf="@+id/_topicTitleTextView" />
+
+    <Button
+        android:id="@+id/_addVoteButton"
+        android:layout_width="48dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/add_votes"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/_topicUsernameTextView"
+        app:layout_constraintEnd_toStartOf="@+id/_subVoteButton"
+        app:layout_constraintTop_toTopOf="@+id/_topicTitleTextView" />
+
+    <Button
+        android:id="@+id/_subVoteButton"
+        android:layout_width="48dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/sub_votes"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/_addVoteButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/_addVoteButton" />
+
+    <TextView
+        android:id="@+id/_topicVotesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="@string/topic_votes"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintBottom_toBottomOf="@+id/_topicUsernameTextView"
+        app:layout_constraintEnd_toStartOf="@+id/_addVoteButton"
+        app:layout_constraintTop_toTopOf="@+id/_topicTitleTextView" />
 </android.support.constraint.ConstraintLayout>
