--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -23,13 +23,11 @@
         android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:onClick="onClickVote"
         android:text="@string/start_voting"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/_topicEntryRecyclerView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/_addTopicFloatingActionButton"
@@ -47,14 +45,18 @@
         app:layout_constraintEnd_toEndOf="parent"/>
         <!--app:src="@drawable/ic_done" -->
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/_topicEntryRecyclerView"
-        android:layout_width="379dp"
-        android:layout_height="463dp"
+    <ExpandableListView
+        android:id="@+id/_topicCategoryExpandableListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="0.5dp"
+        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+        app:layout_constraintBottom_toTopOf="@+id/_startVoteButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/_topicEntryTextView" />
