--- a/app/src/main/res/layout/activity_sprint.xml
+++ b/app/src/main/res/layout/activity_sprint.xml
@@ -61,6 +61,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="onClickNextTopic"
         android:text="@string/next_topic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
