Implements Buttons "New," "Load," and "Vote."  Also included changes to the addTopic button popup.

--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -64,14 +64,12 @@
     <LinearLayout
         android:id="@+id/_snackbarLayout"
         android:layout_width="101dp"
-        android:layout_height="158dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="170dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/_addTopicFloatingActionButton"
-        app:layout_constraintStart_toEndOf="@+id/_startVoteButton">
+        app:layout_constraintBottom_toTopOf="@+id/_addTopicFloatingActionButton"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <EditText
             android:id="@+id/_topicInputEditText"
@@ -79,9 +77,9 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/topic"
-            android:text=""
             android:importantForAutofill="no"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:text="" />
 
         <EditText
             android:id="@+id/_nameInputEditText"
@@ -89,14 +87,14 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/name"
-            android:text=""
             android:importantForAutofill="no"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:text="" />
 
         <Spinner
             android:id="@+id/_categoryInputSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="37dp"
             android:entries="@array/categories_array"
             android:spinnerMode="dropdown" />
 
