Adds minor changes to variable names, logic, and string resources.  Changes include making save and continue session preference files separate to provide ease of clean up.

--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -9,7 +9,8 @@
         android:id="@+id/_categoryTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/category_type"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
