--- a/app/src/main/res/layout/load_session_item.xml
+++ b/app/src/main/res/layout/load_session_item.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="#f0f0f0"
+        android:onClick="onClickSession"
         android:text="@string/date"
         app:layout_constraintEnd_toStartOf="@+id/_sessionItemPopupImageButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +26,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="#f0f0f0"
-        android:contentDescription="sessionViewPopupMenu"
+        android:contentDescription="@string/sessionviewpopupmenu"
+        android:onClick="onClickPopup"
         android:src="@android:drawable/btn_star"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
