Fixed popUpMenu item in the LoadActivity.

--- a/app/src/main/res/menu/load_item_popup.xml
+++ b/app/src/main/res/menu/load_item_popup.xml
@@ -2,7 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="Delete"
-        android:onClick="onClickPopup"/>
+        android:title="Delete" />
 
 </menu>
