--- a/app/src/main/res/layout/load_topic_item.xml
+++ b/app/src/main/res/layout/load_topic_item.xml
@@ -6,6 +6,51 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/_loadtopicUsernameTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/topic_username"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/_loadtopicNameTextView"
+        app:layout_constraintTop_toTopOf="@+id/_loadtopicNameTextView" />
+
+    <TextView
+        android:id="@+id/_loadtopicNameTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/username"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintStart_toStartOf="@+id/_loadtopicTitleTextView"
+        app:layout_constraintTop_toBottomOf="@+id/_loadtopicTitleTextView" />
+
+    <TextView
+        android:id="@+id/_loadtopicVoteNumberTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/votes"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintStart_toStartOf="@+id/_loadtopicTitleTextView"
+        app:layout_constraintTop_toBottomOf="@+id/_loadtopicNameTextView" />
+
+    <TextView
+        android:id="@+id/_loadtopicVotesTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/topic_votes"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/_loadtopicVoteNumberTextView"
+        app:layout_constraintTop_toBottomOf="@+id/_loadtopicNameTextView" />
+
+    <TextView
         android:id="@+id/_loadtopicTitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -47,7 +92,8 @@
         android:text="@string/actions"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/_loadtopicTitleTextView"
-        app:layout_constraintTop_toBottomOf="@+id/_loadtopicTitleTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/_loadtopicVoteNumberTextView" />
 
 </android.support.constraint.ConstraintLayout>
