Updated LoadSessionItem to look better.

--- a/app/src/main/res/layout/load_session_item.xml
+++ b/app/src/main/res/layout/load_session_item.xml
@@ -9,9 +9,9 @@
         android:id="@+id/_viewSessionButton"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="#f0f0f0"
         android:onClick="onClickSession"
         android:textAlignment="textStart"
@@ -23,8 +23,8 @@
     <ImageButton
         android:id="@+id/_sessionItemPopupImageButton"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="#f0f0f0"
         android:contentDescription="@string/sessionviewpopupmenu"
@@ -37,21 +37,22 @@
         android:id="@+id/_viewSessionDateTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/date"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintBottom_toBottomOf="@+id/_viewSessionButton"
         app:layout_constraintEnd_toStartOf="@+id/_sessionItemPopupImageButton"
-        app:layout_constraintStart_toStartOf="@+id/_viewSessionButton" />
+        app:layout_constraintStart_toStartOf="@+id/_viewSessionButton"
+        app:layout_constraintTop_toBottomOf="@+id/_viewSessionTitleTextView" />
 
     <TextView
         android:id="@+id/_viewSessionTitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/topic_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
