--- a/app/src/main/res/menu/load_item_popup.xml
+++ b/app/src/main/res/menu/load_item_popup.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="Delete" />
+        android:title="@string/delete" />
+
+    <item
+        android:title="@string/rename" />
 
 </menu>
