Adds a 'previous' button in SprintActivity.

--- a/app/src/main/res/layout/activity_sprint.xml
+++ b/app/src/main/res/layout/activity_sprint.xml
@@ -68,6 +68,17 @@
         android:text="@string/next_topic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/_prevTopicButton" />
+
+    <Button
+        android:id="@+id/_prevTopicButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="onClickPrevTopic"
+        android:text="@string/previous_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
