--- a/app/src/main/res/menu/load_item_popup.xml
+++ b/app/src/main/res/menu/load_item_popup.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="@string/delete" />
+        android:title="@string/rename"
+        tools:onClick="onClickRename"
+        android:id="@+id/_renamePopUpItem"/>
 
     <item
-        android:title="@string/rename" />
+        android:title="@string/delete"
+        tools:onClick="onClickDelete"
+        android:id="@+id/_deletePopUpItem"/>
 
 </menu>
