--- a/app/src/main/res/layout/load_session_item.xml
+++ b/app/src/main/res/layout/load_session_item.xml
@@ -13,7 +13,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="#f0f0f0"
-        android:onClick="onClickSession"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         app:layout_constraintEnd_toStartOf="@+id/_sessionItemPopupImageButton"
@@ -22,16 +21,29 @@
 
     <ImageButton
         android:id="@+id/_sessionItemPopupImageButton"
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="56dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="#f0f0f0"
         android:contentDescription="@string/sessionviewpopupmenu"
-        android:onClick="onClickPopup"
-        android:src="@android:drawable/btn_star"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <!--android:src="@android:drawable/btn_star"-->
+
+    <TextView
+        android:id="@+id/_threeDotMenuTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:text="@string/three_dot_menu"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/_sessionItemPopupImageButton"
+        app:layout_constraintEnd_toEndOf="@+id/_sessionItemPopupImageButton"
+        app:layout_constraintStart_toStartOf="@+id/_sessionItemPopupImageButton"
+        app:layout_constraintTop_toTopOf="@+id/_sessionItemPopupImageButton" />
 
     <TextView
         android:id="@+id/_viewSessionDateTextView"
