--- a/app/src/main/res/layout/activity_sprint.xml
+++ b/app/src/main/res/layout/activity_sprint.xml
@@ -86,6 +86,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/play_pause"
         android:onClick="playPause"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintEnd_toEndOf="@+id/_timeValueTextView"
         app:layout_constraintStart_toStartOf="@+id/_timeValueTextView"
         app:layout_constraintTop_toBottomOf="@+id/_timeValueTextView"
