Adds delete x's for activity items and constraint percentage for add topic dialog

--- a/app/src/main/res/layout/activity_topic.xml
+++ b/app/src/main/res/layout/activity_topic.xml
@@ -79,7 +79,7 @@
         app:layout_constraintBottom_toTopOf="@+id/_addTopicFloatingActionButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        tools:background="@android:color/background_light">
+        app:background="@android:color/background_light">
 
         <EditText
             android:id="@+id/_topicInputEditText"
