--- a/app/src/main/res/layout/topic_item.xml
+++ b/app/src/main/res/layout/topic_item.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageButton
-        android:id="@+id/_topicItemPopupImageButton3"
+        android:id="@+id/_deleteImageButton"
         android:layout_width="48dp"
         android:layout_height="56dp"
         android:layout_marginTop="8dp"
