--- a/app/src/main/res/layout/load_session_item.xml
+++ b/app/src/main/res/layout/load_session_item.xml
@@ -9,12 +9,14 @@
         android:id="@+id/_viewSessionButton"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="56dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:background="#f0f0f0"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/_sessionItemPopupImageButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,13 +24,13 @@
     <ImageButton
         android:id="@+id/_sessionItemPopupImageButton"
         android:layout_width="48dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="16dp"
         android:background="#f0f0f0"
         android:contentDescription="@string/sessionviewpopupmenu"
+        app:layout_constraintBottom_toBottomOf="@+id/_viewSessionButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/_viewSessionButton" />
     <!--android:src="@android:drawable/btn_star"-->
 
     <TextView
