--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -2,26 +2,34 @@
 
     <!-- A 'parent' preference, which enables/disables child preferences (below)
          when checked/unchecked. -->
-    <SwitchPreference
-        android:defaultValue="true"
-        android:key="notifications_new_message"
-        android:title="@string/pref_title_new_message_notifications" />
+    <ListPreference
+        android:defaultValue="5"
+        android:entries="@array/time_array"
+        android:entryValues="@array/time_array"
+        android:key="timer_minutes"
+        android:title="@string/pref_title_timer_minutes" />
+
+    <ListPreference
+        android:defaultValue="00"
+        android:entries="@array/time_array"
+        android:entryValues="@array/time_array"
+        android:key="timer_seconds"
+        android:title="@string/pref_title_timer_seconds" />
 
     <!-- Allows the user to choose a ringtone in the 'notification' category. -->
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
     <RingtonePreference
         android:defaultValue="content://settings/system/notification_sound"
-        android:dependency="notifications_new_message"
-        android:key="notifications_new_message_ringtone"
-        android:ringtoneType="notification"
+        android:key="alarm_ringtone"
+        android:ringtoneType="alarm"
         android:title="@string/pref_title_ringtone" />
 
-    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
+    <!-- NOTE: This preference will be enabled only when the checkbox above is checked.
     <SwitchPreference
         android:defaultValue="true"
-        android:dependency="notifications_new_message"
-        android:key="notifications_new_message_vibrate"
+        android:key="alarm_vibrate"
         android:title="@string/pref_title_vibrate" />
+    -->
 
 </PreferenceScreen>
