Settings now automatically input the username into the Add Topic Dialog!

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -6,7 +6,7 @@
         android:capitalize="words"
         android:defaultValue="@string/pref_default_display_name"
         android:inputType="textCapWords"
-        android:key="example_text"
+        android:key="username"
         android:maxLines="1"
         android:selectAllOnFocus="true"
         android:singleLine="true"
